Update index.html and url logo

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header">
     <div class="header_logo" title="KrisEmm">
       <a class="header_logo_image" routerLink="">
-        <img alt="logo_image" src="./assets/logo.svg" id="logo">
+        <img alt="logo_image" src="https://krisemm.github.io/krisemm-portfolio/assets/logo.svg" id="logo">
       </a>
       <a class="header_logo_text" routerLink="">
         <p class="notranslate" id="text-logo-1">hi,</p>
