--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer class="animate__animated animate__fadeInUp animate__delay-3s">
-  <p>This website was created by <strong>kristian Emmanuel </strong></p>
+  <p>Este sitio web fue creado por <strong>kristian Emmanuel </strong></p>
   <p>Copyright &copy; 2021 | All rights reserved.</p>
 </footer>
