--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,26 +5,26 @@
         <img alt="logo_image" src="https://krisemm.github.io/krisemm-portfolio/assets/logo.svg" id="logo">
       </a>
       <a class="header_logo_text" routerLink="">
-        <p class="notranslate" id="text-logo-1">hi,</p>
-        <p class="notranslate" id="text-logo-2">there!</p>
+        <p id="text-logo-1">hey,</p>
+        <p id="text-logo-2">que tal!</p>
       </a>
     </div>
     <div class="header_options" id="options-header">
       <div class="header_download">
         <a class="" routerLink="">
-          Home
+          Inicio
         </a>
         <a class="" routerLink="about">
-          About
+          Acerca
         </a>
         <a class="" routerLink="skills">
-          Skills
+          Habilidades
         </a>
         <a class="" routerLink="projects">
-          Projects
+          Proyectos
         </a>
         <a class="" routerLink="contact">
-          Contact
+          Contacto
         </a>
       </div>
       <div class="header_line"></div>
