--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -4,22 +4,20 @@
   </div>
   <div class="hero_info">
     <div class="hero_info_texts">
-      <p class="hero_info_texts_0 animate__animated animate__fadeInLeft">I INTRODUCE MYSELF</p>
-      <p class="hero_info_texts_1 animate__animated animate__fadeInRight">Nice To Meet You</p>
+      <p class="hero_info_texts_0 animate__animated animate__fadeInLeft">ME PRESENTO</p>
+      <p class="hero_info_texts_1 animate__animated animate__fadeInRight">Un Gusto Conocerte</p>
       <div class="hero_info_texts_group">
         <p class="hero_info_texts_group_2 animate__animated animate__fadeInDown animate__delay-2s" translate="no">
           KRISTIAN</p>
-        <p class="hero_info_texts_group_3 animate__animated animate__fadeInDown animate__delay-2s">I AM</p>
+        <p class="hero_info_texts_group_3 animate__animated animate__fadeInDown animate__delay-2s">SOY</p>
       </div>
       <p class="hero_info_texts_4 animate__animated animate__fadeInUp animate__delay-2s" translate="no">EMMANUEL</p>
     </div>
     <div class="hero_info_description animate__animated animate__fadeInUp animate__delay-2s">
-      <p>I am an Industrial Robots Programmer with a great passion for Software Development. This is my website and here
-        you
-        find projects and information about me.</p>
+      <p>Soy Programador de Robots Industriales con una gran pasión por el Desarrollo de Software. Este es mi sitio web y aquí encontrarás proyectos e información sobre mí.</p>
     </div>
     <div class="hero_info_button animate__animated animate__fadeInUp animate__delay-2s">
-      <a class="button" href="" routerLink="contact">Get In Touch</a>
+      <a class="button" href="" routerLink="contact">Contáctame</a>
     </div>
   </div>
   <div class="hero_image animate__animated animate__jackInTheBox animate__delay-3s">
