--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,11 +1,11 @@
 <nav class="menu" [ngClass]="{'show-menu': show}">
   <ul class="menu_navigation">
-    <li class="menu_item" (click)="goto('home')">Home</li>
-    <li class="menu_item" (click)="goto('about')">About</li>
-    <li class="menu_item" (click)="goto('skills')">Skills</li>
-    <li class="menu_item" (click)="goto('projects')">Projects</li>
-    <li class="menu_item" (click)="goto('contact')">Contact</li>
-    <li class="menu_item" (click)="goto('download')">Download CV</li>
+    <li class="menu_item" (click)="goto('home')">Inicio</li>
+    <li class="menu_item" (click)="goto('about')">Acerca</li>
+    <li class="menu_item" (click)="goto('skills')">Habilidades</li>
+    <li class="menu_item" (click)="goto('projects')">Proyectos</li>
+    <li class="menu_item" (click)="goto('contact')">Contacto</li>
+    <li class="menu_item" (click)="goto('download')">Descargar CV</li>
   </ul>
   <div class="menu_links">
     <a href="https://github.com/krisemm" target="_blank">
