--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,15 +1,19 @@
 <div class="about-info-text">
-    <h2 class="about_overline animate__animated animate__fadeInLeft animate__delay-1s">Who am I</h2>
-    <h1 class="about_caption animate__animated animate__fadeInRight animate__delay-1s">About me</h1>
+    <h2 class="about_overline animate__animated animate__fadeInLeft animate__delay-1s">QUE HAY</h2>
+    <h1 class="about_caption animate__animated animate__fadeInRight animate__delay-1s">Acerca de mi</h1>
     <div class="about-text animate__animated animate__fadeInUp">
         <p class="about-paragraph ">
-            I am an Industrial Robotics Engineer. However, my passion is creating web applications. Recently started my journey as a software developer and I am looking for a job opportunity.
+            Soy Ingeniero en Robótica Industrial y he trabajado como programador de robots industriales para la
+            industrial automotriz. Sin
+            embargo, mi
+            pasión es crear sistemas y aplicaciones web.
+            Recientemente comencé mi viaje como desarrollador backend y estoy buscando una oportunidad laboral.
         </p>
           <p class="about-paragraph">
-              I have been working on some personal projects posted to my Github repository and I try to keep myself up to date on the latest technologies and tool by taking online courses.
+              He estado trabajando en algunos proyectos personales publicados en mi repositorio de Github y trato de mantenerme actualizado sobre las últimas tecnologías y herramientas tomando cursos en línea.
           </p>
         <p class="about-paragraph">
-            My goal is to participate in the creation of applications or systems that are scalable and efficient using clean architectures.
+            Mi objetivo es participar en la creación de aplicaciones o sistemas que sean escalables y eficientes haciendo uso de arquitecturas limpias.
         </p>
     </div>
 </div>
