--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,20 +1,19 @@
 <div class="projects">
     <div class="projects-column-a">
         <div class="projects-tabs">
-            <h2 class="projects_overline animate__animated animate__fadeInRight">Projects</h2>
-            <h1 class="projects_caption animate__animated animate__fadeInLeft">Some Things I've
-                Built</h1>
+            <h2 class="projects_overline animate__animated animate__fadeInRight">Proyectos</h2>
+            <h1 class="projects_caption animate__animated animate__fadeInLeft">Algunas Cosas Que He Construido</h1>
             <ul>
                 <li #listTabs class="projects-tab-is-active animate__animated animate__fadeInUp animate__delay-1s"
                     (click)="handleChangeTab($event,'latest-project')"
-                >Latest Project
+                >Último Proyecto
                 </li>
                 <li #listTabs (click)="handleChangeTab($event,'working')"
                     class="animate__animated animate__fadeInUp animate__delay-2s"
-                >Currently Working In
+                >Actualmente Trabando En
                 </li>
                 <li (click)="handleClick()" class="animate__animated animate__fadeInUp animate__delay-3s">
-                    View All Portfolio
+                    Ver Portafolio Completo
                 </li>
             </ul>
         </div>
@@ -45,19 +44,19 @@
         >
             <h2 class="project-featured-name">Youtufy</h2>
             <h4 class="project-featured-subtitles">
-                Overview
+                Description
             </h4>
             <p class="project-featured-paragraphs">
                 This was a fun project that was meant to show off more of my technical skills. It displays my ability
                 to work through a complex problem and find a solution using appropriate data structures while doing so.
             </p>
             <div class="project-featured-links">
-                <a href="">Preview</a>
-                <a href="">How to Works</a>
-                <a href="">Source Code</a>
+                <a href="">Vista Previa</a>
+                <a href="">Como Funciona</a>
+                <a href="">Ver Código</a>
             </div>
             <h4 class="project-featured-subtitles">
-                Technologies Used
+                Tecnologias Usadas
             </h4>
             <ul class="project-featured-lists">
                 <li>ReactJS</li>
@@ -72,7 +71,7 @@
                 <li>CSS3</li>
                 <li>Sass</li>
             </ul>
-            <h4 class="project-featured-subtitles">Notable Features</h4>
+            <h4 class="project-featured-subtitles">Características Relevantes</h4>
             <ul class="project-featured-lists project-featured-list-features">
                 <li>Efficiently calculates neighboring mines to display tile numbers</li>
                 <li>Right click to flag a mine</li>
