--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,23 +1,23 @@
 <div class="skills">
     <div class="skills-column-a">
-        <h1 class="skills-caption animate__animated animate__fadeInRight">Skills</h1>
-        <h2 class="skills-subtitle animate__animated animate__fadeInLeft">I constantly work on self-improvement</h2>
+        <h1 class="skills-caption animate__animated animate__fadeInRight">Habilidades</h1>
+        <h2 class="skills-subtitle animate__animated animate__fadeInLeft">Constantemente trabajo en la superación
+            personal</h2>
         <p class="skills-text animate__animated animate__fadeInLeft animate__delay-1s">
-            I'm a hard-working, enthusiastic & fast learner. I'm a person highly motivated and that continually looks to
-            improve professionally. I'm able to work independently and collaboratively in a team with a meticulous
-            attention to detail.
+            Soy una persona trabajadora, entusiasta y de rápido aprendizaje. Estoy altamente motivado y continuamente
+            busco mejorar profesionalmente. Soy capaz de trabajar de forma independiente y en equipo con una meticulosa atención a los detalles.
         </p>
         <ul class="skills-list"  >
             <li #skillTabs
                 class="skills-item skills-item-active animate__animated animate__fadeInLeft animate__delay-2s"
                 (click)="handleChangeTab($event,'toolsAndTechs')"
             >
-                Tools and Technologies I've been working with recently
+                Herramientas y tecnologías con las que he trabajando recientemente
             </li>
             <li #skillTabs class="skills-item animate__animated animate__fadeInLeft animate__delay-3s"
                 (click)="handleChangeTab($event,'courses')"
             >
-                Online training courses I have taken
+                Cursos de formación online que he tomado
             </li>
         </ul>
     </div>
