Fix translate word

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -10,7 +10,7 @@
             Recientemente comencé mi viaje como desarrollador backend y estoy buscando una oportunidad laboral.
         </p>
           <p class="about-paragraph">
-              He estado trabajando en algunos proyectos personales publicados en mi repositorio de Github y trato de mantenerme actualizado sobre las últimas tecnologías y herramientas tomando cursos en línea.
+              He estado trabajando en algunos proyectos personales publicados en mi repositorio de Github, Ademas constantemente me mantengo actualizado sobre las últimas tecnologías y herramientas tomando cursos en línea.
           </p>
         <p class="about-paragraph">
             Mi objetivo es participar en la creación de aplicaciones o sistemas que sean escalables y eficientes haciendo uso de arquitecturas limpias.
