Fix height container

--- a/src/app/pages/portfolio/portfolio.component.scss
+++ b/src/app/pages/portfolio/portfolio.component.scss
@@ -160,7 +160,7 @@
     }
   }
   .portfolio_list{
-    width: 100%;
+    height: 100vh;
 
   }
 }
@@ -174,7 +174,7 @@
     }
   }
   .portfolio_list{
-    width: 100%;
+    height: 100vh;
 
   }
 }
