--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -15,6 +15,7 @@
 .contact{
   position: relative;
   padding-top: 1rem;
+  height: 100vh;
 }
 .contact_overline{
   font-family: "font-primary-subtitle-2", sans-serif;
