Fix message to not match results

--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -73,125 +73,8 @@
                 <li *ngFor="let tag of project.tags">{{tag}}</li>
             </ul>
         </li>
-<!--        <li class="portfolio_item">-->
-<!--            <h3 class="portfolio_item_name">-->
-<!--                Movie Search App-->
-<!--            </h3>-->
-<!--            <p class="portfolio_item_paragraph">-->
-<!--                Find the latest trending movies to binge watch on your weekend!-->
-<!--            </p>-->
-<!--            <div class="portfolio_item_links">-->
-<!--                <a href="">source code</a>-->
-<!--            </div>-->
-<!--            <ul class="portfolio_item_tags">-->
-<!--                <li>NodeJs</li>-->
-<!--                <li>Express</li>-->
-<!--                <li>Angular</li>-->
-<!--                <li>TMDb API</li>-->
-<!--            </ul>-->
-<!--        </li>-->
-<!--        <li class="portfolio_item">-->
-<!--            <h3 class="portfolio_item_name">-->
-<!--                Movie Search App-->
-<!--            </h3>-->
-<!--            <p class="portfolio_item_paragraph">-->
-<!--                Find the latest trending movies to binge watch on your weekend!-->
-<!--            </p>-->
-<!--            <div class="portfolio_item_links">-->
-<!--                <a href="">source code</a>-->
-<!--            </div>-->
-<!--            <ul class="portfolio_item_tags">-->
-<!--                <li>NodeJs</li>-->
-<!--                <li>Express</li>-->
-<!--                <li>Angular</li>-->
-<!--                <li>TMDb API</li>-->
-<!--            </ul>-->
-<!--        </li>-->
-<!--        <li class="portfolio_item">-->
-<!--            <h3 class="portfolio_item_name">-->
-<!--                Movie Search App-->
-<!--            </h3>-->
-<!--            <p class="portfolio_item_paragraph">-->
-<!--                Find the latest trending movies to binge watch on your weekend!-->
-<!--            </p>-->
-<!--            <div class="portfolio_item_links">-->
-<!--                <a href="">source code</a>-->
-<!--            </div>-->
-<!--            <ul class="portfolio_item_tags">-->
-<!--                <li>NodeJs</li>-->
-<!--                <li>Express</li>-->
-<!--                <li>Angular</li>-->
-<!--                <li>TMDb API</li>-->
-<!--            </ul>-->
-<!--        </li>-->
-<!--        <li class="portfolio_item">-->
-<!--            <h3 class="portfolio_item_name">-->
-<!--                Movie Search App-->
-<!--            </h3>-->
-<!--            <p class="portfolio_item_paragraph">-->
-<!--                Find the latest trending movies to binge watch on your weekend!-->
-<!--            </p>-->
-<!--            <div class="portfolio_item_links">-->
-<!--                <a href="">source code</a>-->
-<!--            </div>-->
-<!--            <ul class="portfolio_item_tags">-->
-<!--                <li>NodeJs</li>-->
-<!--                <li>Express</li>-->
-<!--                <li>Angular</li>-->
-<!--                <li>TMDb API</li>-->
-<!--            </ul>-->
-<!--        </li>-->
-<!--        <li class="portfolio_item">-->
-<!--            <h3 class="portfolio_item_name">-->
-<!--                Movie Search App-->
-<!--            </h3>-->
-<!--            <p class="portfolio_item_paragraph">-->
-<!--                Find the latest trending movies to binge watch on your weekend!-->
-<!--            </p>-->
-<!--            <div class="portfolio_item_links">-->
-<!--                <a href="">source code</a>-->
-<!--            </div>-->
-<!--            <ul class="portfolio_item_tags">-->
-<!--                <li>NodeJs</li>-->
-<!--                <li>Express</li>-->
-<!--                <li>Angular</li>-->
-<!--                <li>TMDb API</li>-->
-<!--            </ul>-->
-<!--        </li>-->
-<!--        <li class="portfolio_item">-->
-<!--            <h3 class="portfolio_item_name">-->
-<!--                Movie Search App-->
-<!--            </h3>-->
-<!--            <p class="portfolio_item_paragraph">-->
-<!--                Find the latest trending movies to binge watch on your weekend!-->
-<!--            </p>-->
-<!--            <div class="portfolio_item_links">-->
-<!--                <a href="">source code</a>-->
-<!--            </div>-->
-<!--            <ul class="portfolio_item_tags">-->
-<!--                <li>NodeJs</li>-->
-<!--                <li>Express</li>-->
-<!--                <li>Angular</li>-->
-<!--                <li>TMDb API</li>-->
-<!--            </ul>-->
-<!--        </li>-->
-<!--        <li class="portfolio_item">-->
-<!--            <h3 class="portfolio_item_name">-->
-<!--                Movie Search App-->
-<!--            </h3>-->
-<!--            <p class="portfolio_item_paragraph">-->
-<!--                Find the latest trending movies to binge watch on your weekend!-->
-<!--            </p>-->
-<!--            <div class="portfolio_item_links">-->
-<!--                <a href="">source code</a>-->
-<!--            </div>-->
-<!--            <ul class="portfolio_item_tags">-->
-<!--                <li>NodeJs</li>-->
-<!--                <li>Express</li>-->
-<!--                <li>Angular</li>-->
-<!--                <li>TMDb API</li>-->
-<!--            </ul>-->
-<!--        </li>-->
-
+        <li>
+            <p class="portfolio_item_not_found" *ngIf="projects.length === 0">No se encontraron resultados</p>
+        </li>
     </ul>
 </div>
