Fix url to download cv

--- a/src/app/components/social-networks/social-networks.component.html
+++ b/src/app/components/social-networks/social-networks.component.html
@@ -20,7 +20,7 @@
     </a>
   </li>
   <li class="social_net_item" title="Download cv">
-    <a href="../../../assets/files/CV-Cristian_Emmanuel_Castillo_Medina.pdf" target="_blank">
+    <a href="https://krisemm.github.io/krisemm-portfolio/assets/files/CV-Cristian_Emmanuel_Castillo_Medina.pdf" target="_blank">
       <i class="fas fa-download fa-lg"></i>
     </a>
   </li>
