--- a/src/app/components/cv-downloader/cv-downloader.component.html
+++ b/src/app/components/cv-downloader/cv-downloader.component.html
@@ -1,5 +1,5 @@
 <div class="cv_downloader animate__animated animate__fadeInUp animate__delay-2s">
     <a class="cv_downloader_link animate__animated animate__flash animate__delay-4s animate__repeat-3"
-       href="../../../assets/files/CV-Cristian_Emmanuel_Castillo_Medina.pdf" target="_blank">Descargar CV</a>
+       href="https://krisemm.github.io/krisemm-portfolio/assets/files/CV-Cristian_Emmanuel_Castillo_Medina.pdf" target="_blank">Descargar CV</a>
     <div class="cv_downloader_line"></div>
 </div>
