Fix Tags filters

--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -48,16 +48,16 @@
                 class="portfolio_basic_filter_item">CSS
             </li>
             <li (click)="handleClickTag($event, 'MVC')"
-                class="portfolio_basic_filter_item">Web
+                class="portfolio_basic_filter_item">MVC
             </li>
             <li (click)="handleClickTag($event, 'Hexagon Architecture')"
-                class="portfolio_basic_filter_item">Web
+                class="portfolio_basic_filter_item">Hexagon Architecture
             </li>
             <li (click)="handleClickTag($event, 'DDD')"
-                class="portfolio_basic_filter_item">Web
+                class="portfolio_basic_filter_item">DDD
             </li>
             <li (click)="handleClickTag($event, 'CQRS')"
-                class="portfolio_basic_filter_item">Web
+                class="portfolio_basic_filter_item">CQRS
             </li>
         </ul>
     </div>
