--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="projects-column-b">
-        <div #latestProject class="working animate__animated animate__fadeIn animate__delay-1s"
+        <div class="working animate__animated animate__fadeIn animate__delay-1s"
              [ngStyle]="{'display': tabName==='working' ? 'block' : 'none'}"
              >
             <ul class="working-projects-list">
@@ -39,7 +39,7 @@
                </li>
             </ul>
         </div>
-        <div  class="project-featured animate__animated animate__fadeIn animate__delay-1s"
+        <div #latestProject class="project-featured animate__animated animate__fadeIn animate__delay-1s"
             [ngStyle]="{'display': tabName==='latest-project' ? 'block' :'none'}"
         >
             <h2 class="project-featured-name">Youtufy</h2>
